kubernetes/cert-manager/components/network-policy/okd/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: cert-manager
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    # Cloudflare API Ips
    # https://www.cloudflare.com/ips/
    - type: Allow
      to:
        dnsName: api.cloudflare.com
    - type: Allow
      to:
        cidrSelector: 104.16.0.0/13
    - type: Allow
      to:
        cidrSelector: 104.24.0.0/14
    - type: Allow
      to:
        cidrSelector: 172.64.0.0/13
    # Cloudflare DNS (dns01 recursive nameservers)
    - type: Allow
      to:
        cidrSelector: 1.1.1.1/32
    - type: Allow
      to:
        cidrSelector: 1.0.0.1/32
    # Google Range
    # https://support.google.com/a/answer/10026322?hl=en
    # https://www.gstatic.com/ipranges/goog.json
    # Cloud DNS API?
    - type: Allow
      to:
        dnsName: dns.googleapis.com
    - type: Allow
      to:
        cidrSelector: 172.217.0.0/16
    # Cloud DNS DNS LookUp?
    - type: Allow
      to:
        cidrSelector: 216.239.32.0/19
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
